--- a/go_server/docker-compose.yaml
+++ b/go_server/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
   etcd:
     image: gcr.io/etcd-development/etcd:v3.4.13
     container_name: etcd
+    restart: always
     ports:
       - 2379:2379
       - 2380:2380
@@ -26,3 +27,13 @@ services:
       - "s1=http://0.0.0.0:2380"
       - "--initial-cluster-state"
       - "new"
+  redis:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    command: redis-server --appendonly yes
+    ports:
+      - 6379:6379
+    volumes:
+      - ../data/redis/data/:/data
+      - ../data/redis/logs/:/logs
